Fixed word wrap bug. Removed console.logs. Fixed bug that caused first database retrieval to error out.

--- a/server/styles/tweet.sass
+++ b/server/styles/tweet.sass
@@ -13,6 +13,7 @@ a
 .tweet-article
   p, h2
     opacity: 0.75
+  
 
   header
     background-color: #503F59
@@ -29,6 +30,7 @@ a
 
   article
     padding: 1em
+    word-break: break-all
 
 
   h2 
@@ -36,11 +38,13 @@ a
     margin: 0 auto
     display: inline-block
     vertical-align: top
+    font-size: 1.3em
   header p
     display: inline-block
     float: right
     vertical-align: top
     margin: 0
+    font-size: .5
   
   footer
     margin: 0 auto
